# You must change these to your own details.
[package]
name = "rust-webpack-template"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
getrandom = { version = "0.2.3", features = ["js"] }
futures = "0.3.18"
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.183", features = ["derive"] }
gloo-utils = { version = "0.1", features = ["serde"] }
anyhow = "1.0.75"
async-trait = "0.1.73"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "HtmlImageElement",
    "Response",
    "Performance",
    "KeyboardEvent",
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.28"
futures = "0.3.18"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
